--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -4,41 +4,30 @@
   top: 0;
   left: 0;
   right: 0;
+  padding: 16px 0;
   width: 100%;
-  border-radius: var(--border-radius);
-  background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(5px);
+  // background: rgba(0, 0, 0, 0.2);
   z-index: 500;
   transition: position 10s ease-in, background-color 0.3s ease-in;
   &.active {
     position: fixed;
-    // border-bottom: 1px solid var(--lightBlack-color);
     background: #000000;
   }
-  &-top {
-    padding: 18px 0;
+  &__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    >.col {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-    }
   }
   &-link {
     display: inline-block;
-    width: 100%;
+    flex-shrink: 0;
     font-weight: 400;
-    font-size: 17px;
+    font-size: 18px;
     line-height: 1.2;
-    color: var(--font-color);
-    &:not(:last-child) {
-      margin-bottom: 5px;
-    }
+    color: var(--global-color);
     &:hover {
-      color: var(--gold-color);
+      color: var(--font-color);
     }
   }
   &-bar {
@@ -49,164 +38,95 @@
       margin-left: 10px;
     }
     .search-label {
-      margin-left: 30px;
+      margin-left: 16px;
     }
-  }
-  &-menu {
-    position: relative;
-    padding: 30px 0;
-    border-top: 0.5px solid #78694F;
-    overflow-x: scroll;
-    &::-webkit-scrollbar,
-    &::-webkit-scrollbar-thumb {
-      display: none;
-      width: 0;
-      height: 0;
-    }
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   top: 0;
-    //   right: 0;
-    //   width: 50px;
-    //   height: 100%;
-    //   background: linear-gradient(90deg, rgba(26, 26, 26, 0) 0%, #1A1A1A 100%);
-    //   z-index: 1;
-    // }
   }
 }
 
-.nav-list {
+.nav-menu {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: 100%;
   @include list-reset;
-  li {
-    &:not(:last-child) {
-      position: relative;
-      margin-right: 11px;
-      padding-right: 11px;
-      &:before {
-        content: '';
+  >li {
+    position: relative;
+    padding: 6px 15px;
+    &.menu-item-has-children {
+      padding-right: 30px;
+      >a::after {
+        content: '\e904';
         position: absolute;
-        right: -2px;
-        top: 40%;
-        width: 3px;
-        height: 3px;
-        border-radius: 5px;
-        background: #D9D9D9;
+        right: -18px;top: 40%;
+        transform: translateY(-50%);
+        font-family: 'icomoon';
+        font-size: 18px;
       }
     }
-    a {
+    &:hover {
+      .sub-menu {
+        opacity: 100%;
+        visibility: visible;
+      }
+    }
+    >a {
       display: inline-block;
+      position: relative;
       font-weight: 400;
       font-size: 15px;
       line-height: 1.1;
       text-transform: uppercase;
       color: var(--font-color);
-      white-space: nowrap;
+    }
+  }
+  .sub-menu {
+    position: absolute;
+    left: 50%;top: 100%;
+    transform: translateX(-50%);
+    list-style: none;
+    padding: 3px 5px;
+    margin: 0;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background: #F5F6F7;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.10);
+    opacity: 0; visibility: hidden;
+    z-index: 1000;
+    transition: opacity .3s ease, visibility .3s ease;
+    li a {
+      display: inline-block;
+      padding: 7px 5px;
+      width: 100%;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 1.2;
+      text-align: center;
+      color: var(--font-color);
       &:hover {
-        color: var(--gold-color);
+        color: var(--global-color);
       }
+    }
+    li:not(:last-child) a {
+      border-bottom: 1px solid var(--grey-color);
     }
   }
 }
-
-.logo {
-  font-family: "BernardoModaContrast", sans-serif;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 28px;
-  text-transform: uppercase;
-  background: linear-gradient(45deg, #C27E21 0%, #F1B74B 50%, #763D12 90.22%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-}
-
 
 /* Lang Dropdown */
 .lang {
   position: relative;
-  display: inline-block;
-  &-toggles {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    .lang-item {
-      &:not(:last-child) {
-        margin-right: 15px;
-      }
-    }
-    .lang-active {
-      padding: 0;
-      color: var(--font-color);
-      &::before {
-        display: none;
-      }
-    }
-  }
+  display: flex;
+  align-items: center;
+  margin: 0 16px;
   &-item {
-    font-size: 17px;
-    color: #86827B;
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
     cursor: pointer;
-  }
-  &-active {
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding-right: 18px;
-    cursor: pointer;
-    &::before {
-      content: '\e906';
-      position: absolute;
-      right: 0;
-      top: 3px;
-      width: 10px;
-      height: 10px;
-      font-family: 'icomoon';
-      font-size: 10px;
-      color: var(--font-color);
-      transition: .3s ease;
+    &:not(:last-child) {
+      margin-right: 14px;
     }
-    .lang-item {
-      font-size: 14px;
-      color: var(--font-color);
-    }
-  }
-  &-dropdown {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-    top: calc(100% + 5px);
-    left: -4px;
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #393939;
-    background: linear-gradient(135deg, #292929 0%, #141414 100%);
-    box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.50);
-    z-index: 1000;
-    transition: 0.4s;
-    .lang-item {
-      &:hover {
-        color: var(--font-color);
-      }
-      &:not(:last-child) {
-        margin-bottom: 6px;
-      }
-    }
-  }
-  &:hover {
-    .lang-dropdown {
-      opacity: 1;
-      visibility: visible;
-    }
-    // .lang-active::before {
-    //   transform: rotate(-180deg);
-    // }
   }
 }
 
@@ -214,15 +134,15 @@
 .search-label {
   position: relative;
   display: inline-block;
+  // overflow: hidden;
   width: 40px;
   height: 40px;
 }
 .search-input {
   position: absolute;
   top: -2px;
-  // right: -9px;
-  left: 50%;
-  transform: translateX(-50%);
+  right: -5px;
+  box-sizing: border-box !important;
   padding: 9px 60px 9px 16px;
   width: 40px;
   height: 44px;
@@ -230,10 +150,10 @@
   font-weight: 400;
   font-size: 17px;
   line-height: 22px;
-  color: var(--black-color);
+  color: var(--font-color);
   border-radius: 10px;
   outline: none;border: none;
-  background: var(--font-color);
+  background: var(--lightGrey-color);
   transition: .3s ease;
   z-index: 10;
   &::placeholder {
@@ -249,11 +169,10 @@
 }
 .search-label.active {
   .search-input {
-    width: 280px;
+    width: 350px;
     opacity: 1;
   }
   .search-btn {
-    transform: translateX(110px);
     // right: -115px;
     i {
       color: var(--black-color);
@@ -262,9 +181,6 @@
 }
 
 
-.header-mob {
-  display: none;
-}
 .btn-toggle {
   display: flex;
   align-items: center;
@@ -273,71 +189,60 @@
   font-size: 24px;
   line-height: 1;
   color: var(--font-color);
-  .icon-close {
-    display: none;
-  }
 }
-.btn-toggle.active {
-  .icon-burger {
-    display: none;
-  }
-  .icon-close {
-    display: block;
-  }
-}
-.menu {
-  &-panel {
-    position: fixed;
-    overflow-x: hidden;
-    overflow-y: auto;
-    top: 100%;
-    right: -100%;
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    max-height: calc(100vh - 40px);
-    padding: 10px 10px 25px 10px;
-    background-color: #000000;
-    transition: right .4s;
-  }
-  &-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    border-top: 1px solid #444444;
-    width: 100%;
-  }
-  &-items {
-    padding: 15px 0;
-    border-bottom: 1px solid #262626;
-    width: 100%;
-    &:last-child {
-      padding-bottom: 0;
-      border-bottom: 0;
-    }
-  }
-  &-btn {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 1;
-    color: var(--font-color);
-    margin: 0;padding: 0;
-    border: 0;outline: none;
-    background: none;
-    i {
-      font-size: 18px;
-      margin-right: 10px;
-      &.icon-sign-out {
-        transform: rotate(180deg);
-      }
-    }
-  }
-}
+// .menu {
+//   &-panel {
+//     position: fixed;
+//     overflow-x: hidden;
+//     overflow-y: auto;
+//     top: 100%;
+//     right: -100%;
+//     width: 100%;
+//     max-width: 100%;
+//     height: auto;
+//     max-height: calc(100vh - 40px);
+//     padding: 10px 10px 25px 10px;
+//     background-color: #000000;
+//     transition: right .4s;
+//   }
+//   &-list {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     justify-content: flex-start;
+//     border-top: 1px solid #444444;
+//     width: 100%;
+//   }
+//   &-items {
+//     padding: 15px 0;
+//     border-bottom: 1px solid #262626;
+//     width: 100%;
+//     &:last-child {
+//       padding-bottom: 0;
+//       border-bottom: 0;
+//     }
+//   }
+//   &-btn {
+//     display: flex;
+//     align-items: center;
+//     justify-content: flex-start;
+//     width: 100%;
+//     font-weight: 400;
+//     font-size: 15px;
+//     line-height: 1;
+//     color: var(--font-color);
+//     margin: 0;padding: 0;
+//     border: 0;outline: none;
+//     background: none;
+//     i {
+//       font-size: 18px;
+//       margin-right: 10px;
+//       &.icon-sign-out {
+//         transform: rotate(180deg);
+//       }
+//     }
+//   }
+// }
 
 @include tablet {
   .header {
