--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -5,19 +5,19 @@ html {
 	overflow-x: hidden;
 }
 body {
-	font-family: "Montserrat", sans-serif;
+	font-family: "Comfortaa", sans-serif;
 	font-style: normal;
 	font-weight: 400;
-	font-size: 16px;
-	line-height: 1.25;
+	font-size: 17px;
+	line-height: 1.2;
 	color: var(--font-color);
-	background: var(--black-color);
+	background: var(--white-color);
 	margin: 0;
 	overflow-x: hidden;
 	position: relative;
 }
 section {
-	padding: 50px 0;
+	margin-bottom: 100px;
 }
 .row {
 	display: flex;
