--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   padding: 16px 0;
+  margin-bottom: 65px;
   width: 100%;
   // background: rgba(0, 0, 0, 0.2);
   z-index: 500;
