--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -4,10 +4,10 @@
 <script src="js/swiper-bundle.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
 
-<script src="js/select2.min.js"></script>
-<script src="js/readmore.min.js"></script>
+<!-- <script src="js/select2.min.js"></script> -->
+<!-- <script src="js/readmore.min.js"></script> -->
 
 <!-- Yandex Map -->
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<b4d2f0f6-8d3a-424f-8458-7a684c31efe5>" type="text/javascript"></script>
-<script src="js/icon_customImage.min.js"></script>
+<!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<b4d2f0f6-8d3a-424f-8458-7a684c31efe5>" type="text/javascript"></script> -->
+<!-- <script src="js/icon_customImage.min.js"></script> -->
 <script src="js/app.min.js"></script>
