--- a/src/scss/blocks/sliders.scss
+++ b/src/scss/blocks/sliders.scss
@@ -10,15 +10,14 @@
 
 /* swiper-bullets styling */
 .swiper-pagination-bullet {
-  width: 5px;
-  height: 5px;
-  margin: 0 3px;
-  background-color: #D9D9D9;
+  width: 10px;
+  height: 10px;
+  margin: 0 6px;
+  background-color: #C8C8C8;
   opacity: 1;
 }
 .swiper-pagination-bullet-active {
-  transform: scale(1.8);
-  background-color: #C9A869;
+  transform: scale(1.5);
 }
 
 
@@ -35,26 +34,27 @@
   background-color: #1B1B1B;
   &::after {
     font-family: 'icomoon' !important;
-    vertical-align: middle;
-    content: '\e901';
-    font-size: 56px;
-    line-height: 26px;
-    width: 56px;
-    height: 26px;
-    color: var(--gold-color);
-    transition: .3s ease;
+    font-size: 40px;
+    line-height: 1;
+    width: 40px;
+    height: 40px;
+    color: #C8C8C8;
+    transition: color .3s ease;
   }
   &:hover {
     &::after {
-      color: var(--font-color);
+      color: var(--global-color);
     }
   }
   &.swiper-button-disabled {
-    opacity: 1;
-    &::after {
-      color: #614924;
-    }
+    opacity: 0.5;
   }
+}
+.swiper-button-prev::after {
+  content: '\e901';
+}
+.swiper-button-next::after {
+  content: '\e900';
 }
 // .swiper-button-prev {
 //   left: -21px;
@@ -62,69 +62,43 @@
 // .swiper-button-next {
 //   right: -21px;
 // }
-.swiper-button-prev::after {
-  transform: rotate(180deg);
-}
 // .swiper-button-next::after {
 //   transform: rotate(-90deg);
 //   margin-left: 5px;
 // }
 
+.swiper-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+  .swiper-pagination-fraction {
+    position: relative;
+    bottom: auto;left: auto;
+    width: auto;
+    text-align: left;
+    font-family: Comfortaa;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    color: #F5F6F7;
+  }
+}
 .swiper-nav {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: row-reverse;
-  margin-top: 40px;
-  gap: 36px;
+  gap: 20px;
   .swiper-button-prev,
   .swiper-button-next {
     position: relative;
     top: auto;left: auto;right: auto;bottom: auto;
     margin-top: 0;
-    width: 56px;
+    width: 40px;
     border-radius: 0;
     background-color: transparent;
-  }
-}
-
-@include tablet {
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: 36px;
-    height: 26px;
-    &::after {
-      font-size: 36px;
-      width: 36px;
-    }
-  }
-  .swiper-nav {
-    margin-top: 30px;
-    gap: 30px;
-    .swiper-button-prev,
-    .swiper-button-next {
-      width: 36px;
-    }
-  }
-}
-
-.noveltySwiper {
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: 36px;
-    height: 26px;
-    &::after {
-      content: '\e900';
-      font-size: 16px;
-      width: 16px;
-    }
-  }
-  .swiper-nav {
-    margin-top: 40px;
-    gap: 36px;
-    .swiper-button-prev,
-    .swiper-button-next {
-      width: 36px;
-    }
   }
 }
