--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -82,6 +82,48 @@
   }
 }
 
+.link-withicon {
+	display: inline-flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	color: var(--global-color);
+	margin: 0;padding: 0;
+	border: 0;outline: none;
+	background: none;
+	i {
+		margin-right: 10px;
+		font-size: 20px;
+	}
+	span {
+		display: inline-flex;
+		align-items: center;
+		justify-content: flex-start;
+		position: relative;
+		font-size: 17px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: normal;
+		text-transform: uppercase;
+		&:before {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -4px;
+			width: 100%;
+			height: 1.5px;
+			border-radius: 5px;
+			background-color: var(--global-color);
+			transition: background-color .3s ease, transform .3s ease;
+		}
+	}
+	&:hover {
+		color: var(--font-color);
+		span::before {
+			transform: translateY(-1px);
+			background-color: var(--font-color);
+		}
+	}
+}
 .link {
 	display: inline-flex;
 	align-items: center;
@@ -109,6 +151,36 @@
 		&::before {
 			transform: translateY(-1px);
 			background-color: var(--font-color);
+		}
+	}
+}
+.link-dark {
+	display: inline-flex;
+	align-items: center;
+	justify-content: flex-start;
+	position: relative;
+	font-size: 17px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+	color: var(--font-color);
+	&:before {
+		content: '';
+		position: absolute;
+		left: 0;
+		bottom: -4px;
+		width: 100%;
+		height: 1.5px;
+		border-radius: 5px;
+		background-color: var(--font-color);
+		transition: background-color .3s ease, transform .3s ease;
+	}
+	&:hover {
+		color: var(--global-color);
+		&::before {
+			transform: translateY(-1px);
+			background-color: var(--global-color);
 		}
 	}
 }
