--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -88,6 +88,8 @@
 @import "widgets/popular.scss";
 @import "widgets/catbl.scss";
 @import "widgets/special.scss";
+@import "widgets/reviews.scss";
+@import "widgets/history.scss";
 
 
 @include tablet {
