--- a/src/scss/blocks/tabs.scss
+++ b/src/scss/blocks/tabs.scss
@@ -1,45 +1,47 @@
-.tabs-nav {
-	overflow: hidden;
-	margin: 0;
-	padding: 0;
-}
-.tabs-nav li {
-	display: block;
-	float: left;
-	padding: 0;
-	list-style: none;
-}    
-.tabs-nav a {
-	display: block;
-	padding: 10px 20px;
-	border-top: 1px solid #ccc;  
-	border-bottom: 1px solid #ccc;
-	border-left: 1px solid #ccc;
-	background: #fbfbfb; 
-	font-size: 16px;
-	text-decoration: none;
-	text-align: center;
-	color: #999;
-}		
-.tabs-nav li:first-child a {
-	border-radius: 5px 0 0 0; 
-}
-.tabs-nav li:last-child a {
-	display: block;
-	border-right: 1px solid #ccc;
-	border-radius: 0 5px 0 0; 
-}
-.tabs-nav a.active {
-	border-bottom: 1px solid #fff;
-	background: #fff;
-	color: #000;
-}    
-.tabs-items {
-	border: 1px solid #ccc;
-	border-radius: 0 5px 5px 5px;
-	background: #fff;
-	margin: -1px 0 0 0;
-}
-.tabs-item {
-	padding: 15px;
+.tabs-style {
+	.tabs-nav {
+		overflow: hidden;
+		margin: 0;
+		padding: 0;
+	}
+	.tabs-nav li {
+		display: block;
+		float: left;
+		padding: 0;
+		list-style: none;
+		margin-top: 10px;
+		margin-bottom: 10px;
+		&:not(:last-child) {
+			margin-right: 70px;
+		}
+	}    
+	.tabs-nav a {
+		display: block;
+		position: relative;
+		padding: 2px 0;
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 1.2;
+		text-transform: uppercase;
+		color: var(--font-color);
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: -1px;
+			width: 100%;
+			height: 2px;
+			background-color: var(--global-color);
+			opacity: 0;
+			transition: opacity .3s ease;
+		}
+		&:hover,
+		&.active {
+			font-weight: 700;
+			&::before {
+				opacity: 1;
+			}
+		}
+	}
 }
