--- a/src/scss/widgets/special.scss
+++ b/src/scss/widgets/special.scss
@@ -5,9 +5,11 @@
     width: 100%;
     .col {
       &:nth-child(1) {
+        position: relative;
         width: calc(40% - 5px);
       }
       &:nth-child(2) {
+        position: relative;
         width: calc(60% - 5px);
       }
     }
@@ -17,6 +19,40 @@
     height: 100%;
     object-fit: cover;
     border-radius: var(--border-radius);
+  }
+  &__tooltip {
+    position: absolute;
+    bottom: 15px;
+    left: 24px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: calc(100% - 48px);
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.2;
+    color: #131313;
+    text-align: center;
+    border-radius: var(--border-radius);
+    background: rgba(245, 246, 247, 0.9);
+    backdrop-filter: blur(2.5px);
+  }
+  .default-wrapper {
+    align-items: flex-start;
+    height: 100%;
+    .title-1 {
+      font-size: 26px;
+      span {
+        display: block;
+        margin-left: 48px;
+      }
+    }
+    p {
+      max-width: 560px;
+    }
+    .link {
+      margin-top: auto;
+    }
   }
   .default-wrapper-dark {
     align-items: flex-start;
@@ -35,12 +71,6 @@
     }
     .link {
       margin-top: auto;
-      &:hover {
-        color: var(--lightGrey-color);
-        &::before {
-          background-color: var(--lightGrey-color);
-        }
-      }
     }
   }
 }
