--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -1,88 +1,36 @@
 /*-----footer-----*/
 .footer {
-  padding: 50px 0;
-  background: var(--black-color);
-  position: relative;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%);
-    width: calc(var(--container-width) - var(--container-offset));
-    height: 1px;
-    background-color: #989898;
-  }
-  &-container {
+	position: relative;
+	width: 100%;
+  &__container {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
     flex-wrap: wrap;
     .col {
-      &:nth-child(1),
+      &:nth-child(1) {
+        width: calc(30% - 15px);
+      }
+      &:nth-child(2) {
+        width: calc(20% - 15px);
+      }
+      &:nth-child(3) {
+        width: calc(20% - 15px);
+      }
       &:nth-child(4) {
-        width: calc(30% - 15px);
-      }
-      &:nth-child(2),
-      &:nth-child(5) {
-        width: calc(40% - 15px);
-      }
-      &:nth-child(3),
-      &:nth-child(6) {
-        width: calc(30% - 15px);
+        width: calc(20% - 15px);
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         text-align: right;
       }
-      &:nth-child(1),
-      &:nth-child(2),
-      &:nth-child(3) {
-        margin-bottom: 72px;
-      }
-      .title-m2 {
-        margin-bottom: 24px;
-        text-transform: none;
-      }
-      .form {
-        width: 100%;
-        max-width: 100%;
-        &-group {
-          width: 360px;
-          max-width: 100%;
-          margin-bottom: 14px;
-        }
-      }
-      .socials {
-        margin-bottom: 40px;
-      }
-      .contacts-items {
-        font-size: 16px;
-        text-transform: none;
-      }
-      .group {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.25;
-        color: #4A4A4A;
-        &:not(:last-child) {
-          margin-bottom: 60px;
-        }
-        a {
-          display: inline-block;
-          margin-bottom: 10px;
-          &:hover {
-            color: var(--font-color);
-            text-decoration: none;
-          }
-        }
-        .item {
-          margin-bottom: 10px;
-          a {
-            text-decoration: underline;
-          }
-        }
+    }
+    .phone {
+      margin-bottom: 26px;
+      font-size: 28px;
+      &:hover {
+        color: var(--global-color);
       }
     }
   }
@@ -94,164 +42,127 @@
       }
       a {
         font-weight: 400;
-        font-size: 17px;
-        line-height: 1.25;
+        font-size: 15px;
+        line-height: 1.15;
         text-transform: uppercase;
-        color: #ECE8E1;
+        color: var(--font-color);
         &:hover {
-          color: var(--gold-color);
+          color: var(--global-color);
         }
       }
     }
   }
   &-title {
-    margin-bottom: 30px;
-    font-weight: 200;
-    font-size: 22px;
-    line-height: 1.2;
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.1;
     text-transform: uppercase;
-    color: #ECE8E1;
+    color: #c8c8c8;
+  }
+  &__bottom {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 30px;
+    .col {
+      &:nth-child(1) {
+        margin-right: 20px;
+        color: #c8c8c8;
+      }
+      .group {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        &:not(:last-child) {
+          margin-bottom: 24px;
+        }
+        &>a {
+          &:not(:last-child) {
+            margin-bottom: 10px;
+          }
+        }
+        a:hover {
+          color: var(--font-color);
+        }
+        p {
+          margin: 0;
+          &:not(:last-child) {
+            margin-bottom: 10px;
+          }
+          a {
+            text-decoration: underline;
+          }
+        }
+      }
+      &:nth-child(2) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+        p {
+          font-size: 15px;
+          margin: 0;
+        }
+      }
+    }
+  }
+  .certif-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    img {
+      width: auto;
+      max-height: 50px;
+      &:not(:first-child) {
+        margin-left: 20px;
+      }
+    }
+  }
+  .logos-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    img {
+      width: auto;
+      max-height: 30px;
+      &:not(:first-child) {
+        margin-left: 30px;
+      }
+    }
   }
 }
 
 .socials {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   a {
     display: inline-flex;
     align-items: center;
-    justify-content: center;
-    width: 54px;
-    height: 54px;
     img {
-      width: 100%;
-      height: 100%;
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
+      margin-left: 15px;
+    }
+    span {
+      font-size: 17px;
+      color: var(--font-color);
+      transition: color .3s ease;
     }
     &:not(:last-child) {
-      margin-right: 20px;
+      margin-bottom: 15px;
     }
     &:hover {
-      transform: scale(1.1);
-    }
-  }
-}
-
-
-@include tablet {
-  /*-----footer-----*/
-  .footer {
-    padding: 40px 0;
-    &::before {
-      width: calc(100% - 30px);
-    }
-    &-container {
-      .col {
-        &:nth-child(1),
-        &:nth-child(2),
-        &:nth-child(3),
-        &:nth-child(4),
-        &:nth-child(5),
-        &:nth-child(6) {
-          margin-bottom: 40px;
-          width: calc(50% - 15px);
-          align-items: flex-start;
-          text-align: left;
-        }
-        &:nth-child(1) {
-          order: 0;
-        }
-        &:nth-child(2) {
-          order: 2;
-        }
-        &:nth-child(4) {
-          order: 3;
-        }
-        &:nth-child(5) {
-          order: 4;
-        }
-        &:nth-child(3) {
-          order: 5;
-          margin-bottom: 0;
-        }
-        &:nth-child(6) {
-          order: 6;
-          margin-bottom: 0;
-        }
-        .group {
-          &:not(:last-child) {
-            margin-bottom: 40px;
-          }
-          a {
-            margin-bottom: 5px;
-            width: 100%;
-            &:hover {
-              color: var(--font-color);
-              text-decoration: none;
-            }
-          }
-          .item {
-            margin-bottom: 5px;
-            a {
-              width: auto;
-              margin-bottom: 0;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-@include mobile {
-  /*-----footer-----*/
-  .footer {
-    padding: 20px 0;
-    &::before {
-      width: calc(100% - 30px);
-    }
-    &-container {
-      flex-direction: column;
-      .col {
-        &:nth-child(1),
-        &:nth-child(2),
-        &:nth-child(3),
-        &:nth-child(4),
-        &:nth-child(5),
-        &:nth-child(6) {
-          width: 100%;
-        }
-        &:not(:last-child) {
-          margin-bottom: 40px;
-        }
-        .logo {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-        }
-        .title-m2 {
-          font-weight: 400;
-        }
-        .group {
-          font-size: 12px;
-          &:not(:last-child) {
-            margin-bottom: 20px;
-          }
-        }
-        .contacts-items {
-          font-size: 12px;
-        }
-      }
-    }
-    &-title {
-      margin-bottom: 20px;
-      font-size: 15px;
-    }
-    &-nav {
-      li {
-        &:not(:last-child) {
-          margin-bottom: 14px;
-        }
-        a {
-          font-size: 15px;
-        }
+      span {
+        color: var(--global-color);
       }
     }
   }
