--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,67 +1,74 @@
 <!--------Footer--------->
 <footer class="footer">
   <div class="container">
-    <div class="footer-container">
-      <div class="col">
-        <a href="/" class="logo"><img src="img/footer-logo.png" alt=""></a>
-      </div>
-      <div class="col">
-        <div class="title-m2">Узнавайте о поступлениях первыми</div>
-        <form action="#" class="form form-subs">
-          <div class="form-group">
-            <input type="email" class="form-input" placeholder="E-mail">
-            <button type="submit" class="btn-reset"><i class="icomoon icon-arrow"></i></button>
+    <div class="default-wrapper">
+      <div class="footer__container">
+        <div class="col">
+          <div class="title-4">Получай акции и новости первым</div>
+          <form action="#" class="form form-subs">
+            <div class="form-group">
+              <input type="email" class="form-input" placeholder="example@gmail.com">
+            </div>
+            <p class="accept">Нажимая на кнопку, вы соглашаетесь с условиями политики конфиденциальности</p>
+            <button class="link" type="submit">Отправить</button>
+          </form>
+        </div>
+        <div class="col">
+          <div class="footer-title">Основные</div>
+          <ul class="footer-nav">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Отзывы</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Оплата и доставка</a></li>
+            <li><a href="#">Возврат и гарантия</a></li>
+            <li><a href="#">Как сделать заказ</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <div class="footer-title">Каталог</div>
+          <ul class="footer-nav">
+            <li><a href="#">Все товары</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Обогреватели</a></li>
+            <li><a href="#">Очистители</a></li>
+            <li><a href="#">Увлажнители</a></li>
+            <li><a href="#">Осушители</a></li>
+            <li><a href="#">Портативные кондиционеры</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <a href="tel:+37256661608" class="phone">+372 5666 1608</a>
+          <div class="socials">
+            <a href="#" class="social"><span>Instagram</span><img src="img/logos/instagram.svg" alt=""></a>
+            <a href="#" class="social"><span>Facebook</span><img src="img/logos/facebook.svg" alt=""></a>
           </div>
-          <label for="subsPolitika" class="checkbox">
-            <input type="checkbox" id="subsPolitika">
-            <span>Я согласен с условиями <a href="#">политики конфиденциальности</a></span>
-          </label>
-        </form>
-      </div>
-      <div class="col">
-        <div class="socials">
-          <a href="https://www.facebook.com/MishkaEZ"><img src="img/icons/facebook.svg" alt=""></a>
-          <a href="https://www.instagram.com/bigmishka_tattoosupply/"><img src="img/icons/instagram.svg" alt=""></a>
-        </div>
-        <div class="contacts-items">
-          <p>TORNSTAR OÜ Reg. nr 16512386</p>
-          <p>Seebi 1, Tallinn, Estonia, 11316</p>
         </div>
       </div>
-      <div class="col">
-        <div class="footer-title">Каталог</div>
-        <ul class="footer-nav">
-          <li><a href="#">Все товары</a></li>
-          <li><a href="#">Новинки</a></li>
-          <li><a href="#">Краски</a></li>
-          <li><a href="#">PMU</a></li>
-          <li><a href="#">Картриджи</a></li>
-          <li><a href="#">Чистящие средства</a></li>
-          <li><a href="#">Аксессуары</a></li>
-          <li><a href="#">Мебель</a></li>
-          <li><a href="#">Оборудование</a></li>
-          <li><a href="#">Источники питания</a></li>
-        </ul>
-      </div>
-      <div class="col">
-        <div class="footer-title">Информация</div>
-        <ul class="footer-nav">
-          <li><a href="about.html">О нас</a></li>
-          <li><a href="studiam-i-masteram.html">Студиям и мастерам</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-          <li><a href="oplata-dostavka-vozvrat.html">Оплата, доставка и возврат</a></li>
-          <li><a href="rassrochka.html">Рассрочка</a></li>
-        </ul>
-      </div>
-      <div class="col">
-        <div class="group">
-          <a href="#">Политика конфиденциальности</a>
-          <a href="#">Договор покупки</a>
+      <div class="footer__bottom">
+        <div class="col">
+          <div class="group">
+            <a href="#">Политика конфиденциальности</a>
+            <a href="#">Условия покупки</a>
+          </div>
+          <div class="group">
+            <p>Сайт сделан в <a href="https://www.redsquirrel.agency/" target="_blank">RedSquirrel</a></p>
+            <p>Copyright © 2023 WarmSystem OÜ</p>
+          </div>
         </div>
-        <div class="group">
-          <div class="item">Сайт сделан в <a href="https://www.redsquirrel.agency/en/">RedSquirrel</a></div>
-          <div class="item">Copyright © 2023 Tornstar OÜ</div>
+        <div class="col">
+          <div class="certif-list">
+            <img src="img/sertificat-logo.svg" alt="">
+            <img src="img/sertificat-logo.svg" alt="">
+            <img src="img/sertificat-logo.svg" alt="">
+          </div>
+          <p>Цены на сайте включают НДС</p>
+          <div class="logos-list">
+            <img src="img/logos/swedbank.png" alt="">
+            <img src="img/logos/lhv.png" alt="">
+            <img src="img/logos/seb.jpg" alt="">
+            <img src="img/logos/luminor.png" alt="">
+          </div>
         </div>
       </div>
     </div>
